Add local CardCache + import script (pokemon-tcg-data) and use it for bulk lookups

--- a/.gitignore
+++ b/.gitignore
@@ -138,6 +138,9 @@ dist
 # sqlite3
 *.sqlite
 
+# large static dataset (downloaded locally)
+data/pokemon-tcg-data/
+
 # vscode workspace
 .vscode/
 *.code-workspace
