--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
         "dev": "node src/server.js",
         "lint": "eslint .",
         "lint:fix": "eslint . --fix",
-        "import:cards": "node scripts/import_cards.js"
+        "import:cards": "node scripts/import_cards.js",
+    "seed:demo": "node scripts/seed_trade_demo.js"
     },
     "author": "Tim Bretz & Kyle LaPointe",
     "license": "ISC",
